# SIN_CARRETA

./: .coveragerc  .deepsource.toml  .descriptions.xml  .flake8  .gitignore  .immutability_snapshot.json  .pre-commit-config.yaml  AGENTS.md  ALIGNMENT_IMPLEMENTATION_SUMMARY.md  ALINEACION_DECALOGO_CORRECCION_CRITICA.txt  ANSWER_ASSEMBLER_ENHANCEMENTS.md  ANSWER_ASSEMBLER_REFACTOR.md  ARCHITECTURE.md  ARTIFACT_DOCUMENTATION_VERIFICATION.md  AUDITORIA_COMPLETA_EXPORT.md  AUDIT_REPORT_2025-10-07.md  AiaStyle.xml  BATCH_LOAD_TEST_SUMMARY.md  BATCH_PROCESSING.md  BATCH_PROCESSING_GUIDE.md  BATCH_TESTING.md  CALIBRATION_INTEGRATION.md  CANONICAL_INTEGRATION.md  CANONICAL_INTEGRATION_AUDIT.md  CANONICAL_PATH_MIGRATION.md  CAUSAL_EFFECT_ESTIMATOR.md  COMPETENCE_VALIDATOR_INTEGRATION.md  COMPONENT_DIAGRAM.md  COVERAGE_IMPLEMENTATION_PLAN.md  CRITICAL_PATHS.md  D6_PREGUNTAS_REALES_CORRECCION.txt  DAG_VALIDATION_COMPLETE_INSERTION_TRACE.txt  DATA_CONTRACTS.md  DECALOGO_ALIGNMENT_FIX_REPORT.md  DECALOGO_ALIGNMENT_TASK_SUMMARY.md  DECALOGO_ALIGNMENT_VERIFICATION_REPORT.md  DECALOGO_FULL.json  DECATALOGO_300_QUESTIONS_INTEGRATION.md  DECATALOGO_ALIGNMENT_REPORT.md  DECATALOGO_PDM_CONTRA_INTEGRATION_SUMMARY.md  (+491 more)
.github/: copilot-instructions.md
api/: __init__.py  example_client.py  server.py  test_server.py
artifacts/: answers_report.json  answers_sample.json  connection_data.json  coverage_report.json  determinism_data.json  diagnostic_data.json  evidence_registry.json  final_results.json  florencia_reporte_final.json  flow_runtime.json  flow_verification_report.json  module_to_questions_matrix.csv  results_bundle.json
artifacts_test/: answers_report.json
batch_examples/: README.md  postman_collection.json  python_client.py  shell_client.sh
bundles/: decalogo-industrial.latest.clean.json  decalogo_bundle.json
config/: QUESTIONNAIRE_MANIFEST.yaml  embedding.yaml
contracts/: README.md  compatibility_matrix.yaml
data/: florencia_plan_texto.txt
devtools/: IMPLEMENTATION_SUMMARY.md  README.md  run_all_checks.sh
docs/: PDQ_CANONICAL_NOTATION.md  PDQ_IMPLEMENTATION_SUMMARY.md  TESTING_STRATEGY.md
econml/: dml.py
evaluation/: __init__.py  causal_effect_estimator.py  ground_truth_collector.py  reliability_calibration.py
exportToHTML/: .deepsource.toml.html  .f2py_f2cmap.html  .gitignore.html  AB.inc.html  AGENTS.md.html  API_CHANGES.txt.html  ATen.h.html  ATenCUDAGeneral.h.html  ATenConfig.cmake.html  ATenGeneral.h.html  ATenOpList.h.html  ATen_fwd.h.html  ATen_pch.h.html  AbortHandler.h.html  AcceleratorHooksInterface.h.html  AccumulateType.h.html  Activation.h.html  AdaptivePooling.h.html  AlignOf.h.html  Allocator.h.html  AmpKernels.h.html  ApplyGridUtils.cuh.html  ApproximateClock.h.html  Array.h.html  ArrayRef.h.html  AsmUtils.cuh.html  AtmWtAg.dat.html  Atomic.cuh.html  AtomicAddFloat.h.html  AutogradState.h.html  Autolev.g4.html  AvifImagePlugin.py.html  BFloat16-inl.h.html  BFloat16-math.h.html  BFloat16.h.html  Backend.h.html  Backtrace.h.html  BatchLinearAlgebra.h.html  BdfFontFile.py.html  BinaryInternal.h.html  (+12363 more)
factibilidad/: __init__.py  pattern_detector.py  scoring.py
jsonschema/: __init__.py  validators.py
migration/: README.md  __init__.py  migrate_legacy_ids.py
orchestrator/: effects_logger.py
output/: evaluation_46873018-6932-4e5d-af0c-5eca00c5c9a4.csv  evaluation_46873018-6932-4e5d-af0c-5eca00c5c9a4.json  migration_log.json  summary_46873018-6932-4e5d-af0c-5eca00c5c9a4.txt
pdm_contra/: __init__.py  core.py  decalogo_alignment.py  models.py
proto/: evidence.proto
python_package/: __init__.py
reports/: FLUX_DIAGNOSTIC_README.md  decalogo_audit.md  decalogo_changelog.md  flux_diagnostic.json  flux_diagnostic_generator.py  output_quality_assessment.json  sample_flux_diagnostic.json  sample_flux_diagnostic.md  tests_contract.md
requirements/: base.txt  dev.txt  prod.txt  security.txt  test.txt  torch-cpu.txt  torch-cuda.txt
schemas/: README.md  common.decalogo.schema.json  decalogo-full.schema.json  decalogo-industrial.schema.json  decalogo_bundle.schema.json  dnp-standards.schema.json  evidence.schema.json  rubric.schema.json
scripts/: analyze_imports.py  check_conflicts.py  check_python_version.py  generate_certificate.py  generate_proto.sh  install_verified.sh  validate_continuous.py  verify_env_and_venv.sh
sin_carreta/: __init__.py  env_validation.py
test_data/: answers_300.json  create_test_fixtures.py  evidence_registry_15.json  flow_doc.json  flow_runtime.json  output_full.json  rubric.json  validation_gates_pass.json
test_templates/: test_decalogo_pipeline_orchestrator_template.py  (+4 more)
tests/: conftest.py  (+14 more)
(+88 files in other folders)
