[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sin-carreta"
version = "2.0.0"
description = "DECÃLOGO INDUSTRIAL evaluation system with embedding models and responsibility detection"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = {text = "MIT"}
authors = [
    {name = "SIN_CARRETA Team"},
]
keywords = ["nlp", "embeddings", "responsibility-detection", "spacy", "transformers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "numpy>=1.21.0,<1.25.0",
    "scipy>=1.7.0,<1.12.0", 
    "scikit-learn>=1.0.0,<1.4.0",
    "sentence-transformers>=2.2.0,<2.3.0",
    "transformers>=4.20.0,<4.36.0",
    "torch>=1.12.0,<2.1.0",
    "spacy>=3.4.0,<3.8.0",
    "opentelemetry-api>=1.15.0,<2.0.0",
    "opentelemetry-sdk>=1.15.0,<2.0.0",
    "pydantic>=1.10.0,<2.0.0",
    "requests>=2.28.0,<3.0.0",
    "click>=8.1.0,<9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
]
monitoring = [
    "prometheus-client>=0.16.0,<0.18.0",
]

[project.scripts]
check-compatibility = "python_310_compatibility_checker:main"

[tool.setuptools.packages.find]
where = [""]
include = ["*"]
exclude = ["tests*", "test_*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    ".",
    "tests",
]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.black]
target-version = ['py310']
line-length = 88
skip-string-normalization = true

[tool.isort]
profile = "black"
py_version = 310

[tool.flake8]
"max-line-length" = 88
"extend-ignore" = ["E203", "W503"]
exclude = ".git,__pycache__,build,dist,out,reports,exportToHTML,.venv,.venv310"
"per-file-ignores" = {"__init__.py" = "F401"}

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
pretty = true
show_error_codes = true
namespace_packages = true
follow_imports = "silent"
exclude = "(^\\.venv/|^venv/|^out/|^reports/|^exportToHTML/|^factibilidad/)"

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["out", "reports", "exportToHTML", "build", "dist", "venv", ".venv"]
select = ["E", "F", "W", "I"]
ignore = ["E203", "W503"]

[tool.ruff.lint.isort]
known-first-party = [
  "embedding_model",
  "responsibility_detector",
  "decalogo_loader",
  "spacy_loader",
  "utils",
]
