[metadata]
name = sin-carreta
version = 2.0.0
description = MINIMINIMOON Sistema Canónico de Evaluación de PDM
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kkkkknhh/SIN_CARRETA
author = SIN_CARRETA Team
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.10,<=3.12
install_requires =
    numpy>=1.21.0,<1.27.0
    scipy>=1.7.0,<1.15.0
    scikit-learn>=1.0.0,<1.7.0
    sentence-transformers>=2.2.0,<2.3.0
    transformers>=4.20.0,<4.50.0
    torch>=1.12.0,<3.0.0
    spacy>=3.4.0,<4.0.0
    pandas>=2.0.0
    networkx>=2.6.0,<4.0.0
    pydantic>=2.0.0,<3.0.0
    jsonschema>=4.0.0

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-mock>=3.10.0
    mypy>=1.0.0
    black>=23.0.0
    flake8>=6.0.0
    isort>=5.12.0
test =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-mock>=3.10.0
prod =
    fastapi>=0.104.0
    uvicorn[standard]>=0.24.0
    redis>=5.0.0
    celery>=5.3.0
security =
    safety>=3.0.0
    bandit>=1.7.0
    pip-audit>=2.6.0

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist,out,reports,exportToHTML,.venv,venv

[mypy]
python_version = 3.10
ignore_missing_imports = True
pretty = True
show_error_codes = True

[tool:pytest]
minversion = 7.0
addopts = -ra -q --strict-markers
testpaths = .
python_files = test_*.py
python_functions = test_*
